Fix: update MongoDB Atlas URI in local .env

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/swipeapp
+MONGO_URI=mongodb+srv://swipeuser:<Swipe1234!>@swipeappcluster.hol9pbc.mongodb.net/
 JWT_SECRET=yourSuperSecretKey
 PORT=5000
