--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-MONGO_URI=mongodb+srv://swipeuser:<Swipe1234!>@swipeappcluster.hol9pbc.mongodb.net/
+MONGO_URI=mongodb+srv://swipeuser:Swipe1234!@swipeappcluster.hol9pbc.mongodb.net/swipeapp?retryWrites=true&w=majority
 JWT_SECRET=yourSuperSecretKey
-PORT=5000
